@@ -1,5 +1,6 @@
 Version 3.7
 
+* IMPROVEMENT: Added detailed coverage report in html format.
 * BUGFIX: Fixed HMAC for hash functions with other than 512 bit internal block size.
 
 2016-01-26 release(3.7.1037)
